--- a/ValidationData/TP/additional/mydata_all.ipynb
+++ b/ValidationData/TP/additional/mydata_all.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>754</th>\n",
+       "      <th>1531</th>\n",
        "      <td>Sample_20078</td>\n",
        "      <td>Sample_20079</td>\n",
        "      <td>Sample_20080</td>\n",
@@ -883,25 +883,25 @@
        "</div>"
       ],
       "text/plain": [
-       "           sample            fa            mo  \\\n",
-       "754  Sample_20078  Sample_20079  Sample_20080   \n",
+       "            sample            fa            mo  \\\n",
+       "1531  Sample_20078  Sample_20079  Sample_20080   \n",
        "\n",
-       "                                               Disease  is_denovo  \\\n",
-       "754  ESES_Childhood onset EE_GDD,ESES_Childhood_ons...       True   \n",
+       "                                                Disease  is_denovo  \\\n",
+       "1531  ESES_Childhood onset EE_GDD,ESES_Childhood_ons...       True   \n",
        "\n",
-       "          variant_id         State Identified_Gene CHROM       POS  ...  \\\n",
-       "754  10-35360126-C-T  Undetermined             NaN    10  35360126  ...   \n",
+       "           variant_id         State Identified_Gene CHROM       POS  ...  \\\n",
+       "1531  10-35360126-C-T  Undetermined             NaN    10  35360126  ...   \n",
        "\n",
-       "     omimid   DM Gene Disease/Phentyope Inheritance  Variants to report  \\\n",
-       "754  603135  0.0  NaN               NaN          NaN                NaN   \n",
+       "      omimid   DM Gene Disease/Phentyope Inheritance  Variants to report  \\\n",
+       "1531  603135  0.0  NaN               NaN          NaN                NaN   \n",
        "\n",
-       "    is_95%_CCRs   Screening Result is_known_disease_gene Known disease gene  \n",
-       "754       False  Positive (n = 40)                 False            Unknown  \n",
+       "     is_95%_CCRs   Screening Result is_known_disease_gene Known disease gene  \n",
+       "1531       False  Positive (n = 40)                 False            Unknown  \n",
        "\n",
        "[1 rows x 97 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,13 +912,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dea54b5ff064703b8a0b9b5edae9054",
+       "model_id": "7f97298c141d42f281bdfd95c38e24a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -928,7 +928,7 @@
        "              'mode': 'markers',\n",
        "              'selected': {'marker': {'color': 'firebrick'}},\n",
        "              'type': 'scatter',\n",
-       "              'uid': '270c8e3d-8134-4bac-a041-2bb130f871d6',\n",
+       "              'uid': 'cfc86e3f-bde2-45ee-a901-0a859305673d',\n",
        "              'unselected': {'marker': {'opacity': 0.6}},\n",
        "              'x': array([-5., -3., -3., ...,  3.,  5.,  3.]),\n",
        "              'y': array([0., 0., 0., ..., 1., 1., 1.])},\n",
@@ -948,7 +948,7 @@
        "                       'colorscale': [[0, 'lightgray'], [1, 'red']],\n",
        "                       'shape': 'hspline'},\n",
        "              'type': 'parcats',\n",
-       "              'uid': '2507674e-9e96-4d66-9f72-fefb272a9184'}],\n",
+       "              'uid': '7200947f-50c8-4a31-83c8-b5e12cc251c6'}],\n",
        "    'layout': {'dragmode': 'lasso',\n",
        "               'height': 800,\n",
        "               'hovermode': 'closest',\n",
@@ -968,7 +968,7 @@
        "})"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1044,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_pickle(f\"mydata_plotly.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1071,52 +1080,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "754         CUL2\n",
-       "5325      CYB5R4\n",
-       "2608      OSBPL7\n",
-       "3917      TFAP2C\n",
-       "3784       TEKT4\n",
-       "1302      CCDC63\n",
-       "5911       MMP16\n",
-       "2254        UBN1\n",
-       "3860        RPN2\n",
-       "30       EXOSC10\n",
-       "1847     PLEKHD1\n",
-       "4834       HDAC3\n",
-       "133        DCST1\n",
-       "2611      NFE2L1\n",
-       "200       SFT2D2\n",
-       "4198        ISY1\n",
-       "929         USP2\n",
-       "3683    ARHGEF33\n",
-       "6135       DCTN3\n",
-       "5926       MATN2\n",
-       "Name: GeneSymbol, dtype: object"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2_unknown['GeneSymbol']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add interpriation\n",
-    "interpritations: dict = {\n",
+    "interpretations: dict = {\n",
     "\t\"Sample_20526\": \"Mismatched phenotype\",\n",
     "\t\"Sample_7605\": \t\"Mismatched phenotype\",\n",
     "\t\"Sample_22025\": \"Mismatched phenotype\",\n",
@@ -1136,25 +1105,48 @@
     "\t\"Sample_7723\": \t\"Mismatched phenotype\",\n",
     "\t\"Sample_22460\": \"Mismatched phenotype\",\n",
     "\t\"Sample_17483\": \"P (Novel variant)\",\n",
-    "\t\"Sample_11873\": \"Mismatched phenotype\"}"
+    "\t\"Sample_11873\": \"Mismatched phenotype\"}\n",
+    "\n",
+    "interpretations_unknwon: dict = {\n",
+    "\t\"10-35360126-C-T\": \"P (Reported variant)\",\n",
+    "\t\"6-84624133-A-C\": \"P (Reported variant)\",\n",
+    "\t\"17-45891202-T-G\": \"P (Reported variant)\",\n",
+    "\t\"20-55206743-G-A\": \"P (Reported variant)\",\n",
+    "\t\"2-95539264-G-A\": \"P (Reported variant)\",\n",
+    "\t\"12-111311766-G-A\": \"P (Reported variant)\",\n",
+    "\t\"16-4918905-G-A\": \"P (Reported variant)\",\n",
+    "\t\"20-35826897-T-G\": \"P (Reported variant)\",\n",
+    "\t\"8-89198703-A-T\": \"P (Reported variant)\",\n",
+    "\t\"1-11129615-C-G\": \"P (Reported variant)\",\n",
+    "\t\"17-46134392-A-C\": \"P (Reported variant)\",\n",
+    "\t\"1-155012960-G-A\": \"P (Reported variant)\",\n",
+    "\t\"1-168211737-A-C\": \"P (Reported variant)\",\n",
+    "\t\"5-141005760-C-A\": \"P (Reported variant)\",\n",
+    "\t\"3-128853674-C-T\": \"P (Reported variant)\",\n",
+    "\t\"14-69988999-G-T\": \"P (Reported variant)\",\n",
+    "\t\"9-34618759-T-C\": \"P (Reported variant)\",\n",
+    "\t\"2-39156972-G-C\": \"P (Reported variant)\",\n",
+    "\t\"8-99028891-G-A\": \"P (Reported variant)\",\n",
+    "\t\"11-119230372-T-C\": \"P (Reported variant)\"\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_interpritation(x: str) -> str:\n",
-    "\tif x in interpritations.keys():\n",
-    "\t\treturn interpritations[x]\n",
+    "def add_interpretation(x: str) -> str:\n",
+    "\tif x in interpretations.keys():\n",
+    "\t\treturn interpretations[x]\n",
     "\n",
-    "df2_known['Interpretation'] = df2_known['Case'].apply(add_interpritation)"
+    "df2_known['Interpretation'] = df2_known['Case'].apply(add_interpretation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
