--- a/ValidationData/TP/additional/mydata_all.ipynb
+++ b/ValidationData/TP/additional/mydata_all.ipynb
@@ -246,21 +246,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025/01/09 04:27:04 [INFO   ] (__main__) - Calculate the distance to the nearest splice site in intron variant...\n"
+      "2025/03/14 02:12:18 [INFO   ] (__main__) - Calculate the distance to the nearest splice site in intron variant...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16353/16353 [00:08<00:00, 1832.12it/s]"
+      "100%|██████████| 16353/16353 [00:08<00:00, 1842.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025/01/09 04:27:13 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n"
+      "2025/03/14 02:12:26 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n"
      ]
     },
     {
@@ -268,63 +268,63 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 16353/16353 [00:06<00:00, 2625.28it/s]\n"
+      "100%|██████████| 16353/16353 [00:06<00:00, 2709.18it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025/01/09 04:27:19 [INFO   ] (__main__) - Annotating splicing information...\n",
-      "2025/01/09 04:27:19 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
+      "2025/03/14 02:12:33 [INFO   ] (__main__) - Annotating splicing information...\n",
+      "2025/03/14 02:12:33 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16353/16353 [00:00<00:00, 20282.14it/s]\n",
-      "100%|██████████| 16353/16353 [00:00<00:00, 18687.46it/s]\n"
+      "100%|██████████| 16353/16353 [00:00<00:00, 20679.45it/s]\n",
+      "100%|██████████| 16353/16353 [00:00<00:00, 19091.06it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025/01/09 04:27:21 [INFO   ] (__main__) - Parsing SpliceAI results...\n",
-      "2025/01/09 04:27:21 [INFO   ] (__main__) - Annotating Exon/Intron position information...\n"
+      "2025/03/14 02:12:35 [INFO   ] (__main__) - Parsing SpliceAI results...\n",
+      "2025/03/14 02:12:35 [INFO   ] (__main__) - Annotating Exon/Intron position information...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16353/16353 [00:06<00:00, 2442.90it/s]\n",
-      "100%|██████████| 16353/16353 [00:00<00:00, 18599.51it/s]\n"
+      "100%|██████████| 16353/16353 [00:06<00:00, 2496.31it/s]\n",
+      "100%|██████████| 16353/16353 [00:00<00:00, 18824.74it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025/01/09 04:27:31 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
-      "2025/01/09 04:27:32 [INFO   ] (__main__) - Predicting CDS change...\n"
+      "2025/03/14 02:12:45 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
+      "2025/03/14 02:12:45 [INFO   ] (__main__) - Predicting CDS change...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16353/16353 [00:04<00:00, 3470.06it/s]\n",
-      "100%|██████████| 16353/16353 [00:00<00:00, 165502.71it/s]\n"
+      "100%|██████████| 16353/16353 [00:04<00:00, 3516.30it/s]\n",
+      "100%|██████████| 16353/16353 [00:00<00:00, 168212.83it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025/01/09 04:27:37 [INFO   ] (__main__) - Annotating CCRs info...\n",
-      "2025/01/09 04:27:37 [INFO   ] (__main__) - Annotate CCR score\n"
+      "2025/03/14 02:12:51 [INFO   ] (__main__) - Annotating CCRs info...\n",
+      "2025/03/14 02:12:51 [INFO   ] (__main__) - Annotate CCR score\n"
      ]
     }
    ],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -787,14 +787,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "230\n"
+      "40\n"
      ]
     }
    ],
@@ -805,120 +805,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sample</th>\n",
-       "      <th>fa</th>\n",
-       "      <th>mo</th>\n",
-       "      <th>Disease</th>\n",
-       "      <th>is_denovo</th>\n",
-       "      <th>variant_id</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Identified_Gene</th>\n",
-       "      <th>CHROM</th>\n",
-       "      <th>POS</th>\n",
-       "      <th>...</th>\n",
-       "      <th>omimid</th>\n",
-       "      <th>DM</th>\n",
-       "      <th>Gene</th>\n",
-       "      <th>Disease/Phentyope</th>\n",
-       "      <th>Inheritance</th>\n",
-       "      <th>Variants to report</th>\n",
-       "      <th>is_95%_CCRs</th>\n",
-       "      <th>Screening Result</th>\n",
-       "      <th>is_known_disease_gene</th>\n",
-       "      <th>Known disease gene</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1531</th>\n",
-       "      <td>Sample_20078</td>\n",
-       "      <td>Sample_20079</td>\n",
-       "      <td>Sample_20080</td>\n",
-       "      <td>ESES_Childhood onset EE_GDD,ESES_Childhood_ons...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>10-35360126-C-T</td>\n",
-       "      <td>Undetermined</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10</td>\n",
-       "      <td>35360126</td>\n",
-       "      <td>...</td>\n",
-       "      <td>603135</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Positive (n = 40)</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Unknown</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 97 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            sample            fa            mo  \\\n",
-       "1531  Sample_20078  Sample_20079  Sample_20080   \n",
-       "\n",
-       "                                                Disease  is_denovo  \\\n",
-       "1531  ESES_Childhood onset EE_GDD,ESES_Childhood_ons...       True   \n",
-       "\n",
-       "           variant_id         State Identified_Gene CHROM       POS  ...  \\\n",
-       "1531  10-35360126-C-T  Undetermined             NaN    10  35360126  ...   \n",
-       "\n",
-       "      omimid   DM Gene Disease/Phentyope Inheritance  Variants to report  \\\n",
-       "1531  603135  0.0  NaN               NaN          NaN                NaN   \n",
-       "\n",
-       "     is_95%_CCRs   Screening Result is_known_disease_gene Known disease gene  \n",
-       "1531       False  Positive (n = 40)                 False            Unknown  \n",
-       "\n",
-       "[1 rows x 97 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[df['Priority Score'] == 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f97298c141d42f281bdfd95c38e24a2",
+       "model_id": "b02ce484e6324717af5b562840f4f17c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -928,7 +821,7 @@
        "              'mode': 'markers',\n",
        "              'selected': {'marker': {'color': 'firebrick'}},\n",
        "              'type': 'scatter',\n",
-       "              'uid': 'cfc86e3f-bde2-45ee-a901-0a859305673d',\n",
+       "              'uid': '2c6b5f46-2031-4dbf-ae8a-6adcd2527c17',\n",
        "              'unselected': {'marker': {'opacity': 0.6}},\n",
        "              'x': array([-5., -3., -3., ...,  3.,  5.,  3.]),\n",
        "              'y': array([0., 0., 0., ..., 1., 1., 1.])},\n",
@@ -948,7 +841,7 @@
        "                       'colorscale': [[0, 'lightgray'], [1, 'red']],\n",
        "                       'shape': 'hspline'},\n",
        "              'type': 'parcats',\n",
-       "              'uid': '7200947f-50c8-4a31-83c8-b5e12cc251c6'}],\n",
+       "              'uid': '0c829fc1-1d2b-44e8-b90c-5b6e84c099cf'}],\n",
        "    'layout': {'dragmode': 'lasso',\n",
        "               'height': 800,\n",
        "               'hovermode': 'closest',\n",
@@ -968,7 +861,7 @@
        "})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,27 +1000,28 @@
     "\t\"Sample_17483\": \"P (Novel variant)\",\n",
     "\t\"Sample_11873\": \"Mismatched phenotype\"}\n",
     "\n",
+    "\n",
     "interpretations_unknwon: dict = {\n",
-    "\t\"10-35360126-C-T\": \"P (Reported variant)\",\n",
-    "\t\"6-84624133-A-C\": \"P (Reported variant)\",\n",
-    "\t\"17-45891202-T-G\": \"P (Reported variant)\",\n",
-    "\t\"20-55206743-G-A\": \"P (Reported variant)\",\n",
-    "\t\"2-95539264-G-A\": \"P (Reported variant)\",\n",
-    "\t\"12-111311766-G-A\": \"P (Reported variant)\",\n",
-    "\t\"16-4918905-G-A\": \"P (Reported variant)\",\n",
-    "\t\"20-35826897-T-G\": \"P (Reported variant)\",\n",
-    "\t\"8-89198703-A-T\": \"P (Reported variant)\",\n",
-    "\t\"1-11129615-C-G\": \"P (Reported variant)\",\n",
-    "\t\"17-46134392-A-C\": \"P (Reported variant)\",\n",
-    "\t\"1-155012960-G-A\": \"P (Reported variant)\",\n",
-    "\t\"1-168211737-A-C\": \"P (Reported variant)\",\n",
-    "\t\"5-141005760-C-A\": \"P (Reported variant)\",\n",
-    "\t\"3-128853674-C-T\": \"P (Reported variant)\",\n",
-    "\t\"14-69988999-G-T\": \"P (Reported variant)\",\n",
-    "\t\"9-34618759-T-C\": \"P (Reported variant)\",\n",
-    "\t\"2-39156972-G-C\": \"P (Reported variant)\",\n",
-    "\t\"8-99028891-G-A\": \"P (Reported variant)\",\n",
-    "\t\"11-119230372-T-C\": \"P (Reported variant)\"\n",
+    "\t\"10-35360126-C-T\":  \"VUS\",\n",
+    "\t\"6-84624133-A-C\":   \"VUS\",\n",
+    "\t\"17-45891202-T-G\":  \"VUS\",\n",
+    "\t\"20-55206743-G-A\":  \"VUS\",\n",
+    "\t\"2-95539264-G-A\":   \"VUS\",\n",
+    "\t\"12-111311766-G-A\": \"VUS\",\n",
+    "\t\"16-4918905-G-A\":   \"Novel candidate gene\",\n",
+    "\t\"20-35826897-T-G\":  \"VUS\",\n",
+    "\t\"8-89198703-A-T\":   \"VUS\",\n",
+    "\t\"1-11129615-C-G\":   \"VUS\",\n",
+    "\t\"17-46134392-A-C\":  \"Novel candidate gene\",\n",
+    "\t\"1-155012960-G-A\":  \"VUS\",\n",
+    "\t\"1-168211737-A-C\":  \"VUS\",\n",
+    "\t\"5-141005760-C-A\":  \"VUS\",\n",
+    "\t\"3-128853674-C-T\":  \"VUS\",\n",
+    "\t\"14-69988999-G-T\":  \"VUS\",\n",
+    "\t\"9-34618759-T-C\":   \"VUS\",\n",
+    "\t\"2-39156972-G-C\":   \"VUS\",\n",
+    "\t\"8-99028891-G-A\":   \"VUS\",\n",
+    "\t\"11-119230372-T-C\": \"VUS\"\n",
     "}\n"
    ]
   },
